Feedback Front-End Remake

--- a/feedbackSystem/base/locale/hi/LC_MESSAGES/django.po
+++ b/feedbackSystem/base/locale/hi/LC_MESSAGES/django.po
@@ -1,4 +1,4 @@
-# Hindi Translation File for feedbackSystem.
+# Hindi Translation File for base app in feedbackSystem.
 # Copyright (C) 2023 Binary Brigade
 # This file is distributed under the same license as the feedbackSystem package.
 # Swastik Kulshreshtha <swastik2442@gmail.com>, 2023.
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: feedbackSystem 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-12-16 17:12+0530\n"
-"PO-Revision-Date: 2023-12-19 00:13+0530\n"
+"PO-Revision-Date: 2023-12-19 16:17+0530\n"
 "Last-Translator: Swastik Kulshreshtha <swastik2442@gmail.com>\n"
 "Language: Hindi\n"
 "MIME-Version: 1.0\n"
@@ -17,56 +17,74 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: .\templates\base\home.html:11
-msgid "Police Feedback System"
-msgstr "पुलिस फीडबैक प्रणाली"
+#: .\base\templates\base\home.html:11 .\base\templates\base\home.html:27
+msgid "Home"
+msgstr "होम"
 
-#: .\templates\base\login.html:6 .\templates\base\login.html:19
+#: .\base\templates\base\home.html:11
+msgid "Police Feedback System"
+msgstr "पुलिस प्रतिक्रिया प्रणाली"
+
+#: .\base\templates\base\home.html:28
+msgid "Feedback"
+msgstr "प्रतिक्रिया"
+
+#: .\base\templates\base\home.html:29
+msgid "Staff Dashboard"
+msgstr "स्टाफ डैशबोर्ड"
+
+#: .\base\templates\base\home.html:35
+msgid "Log Out"
+msgstr "लॉग आउट"
+
+#: .\base\templates\base\home.html:37 .\base\templates\base\login.html:6
+#: .\base\templates\base\login.html:12 .\base\templates\base\login.html:24
 msgid "Login"
 msgstr "लॉग इन"
 
-#: .\templates\base\login.html:8 .\templates\base\login.html:13
-#: .\templates\base\signup.html:14
-msgid "Phone Number"
-msgstr "फ़ोन नंबर"
-
-#: .\templates\base\login.html:10 .\templates\base\login.html:13
-#: .\templates\base\signup.html:16
-msgid "Password"
-msgstr "कूट शब्द"
-
-#: .\templates\base\login.html:13
-msgid "Invalid"
-msgstr "अमान्य"
-
-#: .\templates\base\login.html:16
-msgid "New User?"
-msgstr "नए यूजर?"
-
-#: .\templates\base\login.html:17
-msgid "Forgot your Password?"
-msgstr "कूट शब्द भूल गए?"
-
-#: .\templates\base\signup.html:6 .\templates\base\signup.html:23
+#: .\base\templates\base\home.html:38 .\base\templates\base\signup.html:10
+#: .\base\templates\base\signup.html:49
 msgid "Sign Up"
 msgstr "साइन अप"
 
-#: .\templates\base\signup.html:8
+#: .\base\templates\base\login.html:14 .\base\templates\base\login.html:22
+#: .\base\templates\base\signup.html:28
+msgid "Phone Number"
+msgstr "फ़ोन नंबर"
+
+#: .\base\templates\base\login.html:18 .\base\templates\base\login.html:22
+#: .\base\templates\base\signup.html:35
+msgid "Password"
+msgstr "कूटशब्द"
+
+#: .\base\templates\base\login.html:22
+msgid "Invalid"
+msgstr "अमान्य"
+
+#: .\base\templates\base\login.html:25
+msgid "Forgot your Password?"
+msgstr "कूटशब्द भूल गए?"
+
+#: .\base\templates\base\login.html:26
+msgid "New User?"
+msgstr "नए यूजर?"
+
+#: .\base\templates\base\signup.html:14
 msgid "First Name"
 msgstr "मुख्य नाम"
 
-#: .\templates\base\signup.html:10
+#: .\base\templates\base\signup.html:18
 msgid "Last Name"
 msgstr "कुलनाम"
 
-#: .\templates\base\signup.html:12
+#: .\base\templates\base\signup.html:24
 msgid "Email ID"
 msgstr "ईमेल आईडी"
 
-#: .\templates\base\signup.html:18
+#: .\base\templates\base\signup.html:40
 msgid "Confirm Password"
-msgstr "कूट शब्द की पुष्टि करें"
+msgstr "कूटशब्द की पुष्टि करें"
 
-#: .\templates\base\signup.html:21
+#: .\base\templates\base\signup.html:47
 msgid "An error occured while processing your request. Please try again later."
 msgstr "कृपया बाद में पुन: प्रयास करें।"
